1. Collection API Улучшения [#254095]