@@ -11,7 +11,7 @@ public class DepartamentTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1","k1/sk1");
+        List<String> expect = List.of("k1","k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -20,7 +20,7 @@ public class DepartamentTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -29,7 +29,7 @@ public class DepartamentTest {
     @Test
     public void whenAllDepsThenSortedAscended(){
         List<String> input = Arrays.asList("K1/SK1/SSK1", "K2/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2", "K1/SK1", "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2");
+        List<String> expect = List.of("K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
@@ -38,7 +38,7 @@ public class DepartamentTest {
     @Test
     public void whenAllDepsThaenSortedDescended(){
         List<String> input = Arrays.asList("K1/SK1/SSK1", "K2/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2", "K1/SK1", "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList("K2","K2/SK1","K2/SK1/SSK1","K2/SK1/SSK2","K1","K1/SK1","K1/SK1/SSK1","K1/SK1/SSK2","K1/SK2");
+        List<String> expect = List.of("K2","K2/SK1","K2/SK1/SSK1","K2/SK1/SSK2","K1","K1/SK1","K1/SK1/SSK1","K1/SK1/SSK2","K1/SK2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
         assertThat(result, is(expect));
